# process-explorer

./: README.md  pyproject.toml
.github/workflows/: build-deb.yml  build-rpm.yml  transifex-sync.yml
.tx/: config
data/: io.github.yeager.ProcessExplorer.desktop  se.danielnylander.process-explorer.desktop
locale/sv/LC_MESSAGES/: process-explorer.mo
po/: process-explorer.pot  sv.mo  sv.po
src/process_explorer/: __init__.py  __main__.py  main.py
