[project]
name = "process-explorer"
version = "0.1.4"
description = "GTK4 process explorer - htop in a GUI"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
dependencies = ["PyGObject>=3.42", "psutil>=5.9"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"
